--- a/css/style.scss
+++ b/css/style.scss
@@ -1,7 +1,13 @@
-*{
-    padding: 15px;
+.nav-item{
+    color: black;
+    list-style: none;
 }
 
-#itemnav1 {
-    overflow: hidden;
+.nav-2.nav-item{
+list-style: none;
+}
+.items{
+    overflow-x: hidden;
+    display: flex;
+    color: black;
 }
